welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: taille is already defined as value taille
			var tabCol(taille:Int):Array[Color]=new Array[Color](taille)
                                  ^Array1:8: error: not found: value tabCol
			var tabCol(taille:Int):Array[Color]=new Array[Color](taille)
                            ^Array1:12: error: not found: value tabCol
				tabCol(i) = c
                                ^Array1:13: error: value unary_! is not a member of java.awt.Color
			}while(!colIni == c)
                               ^Array1:16: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
				droite()
                                      ^